// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./Pus011Apid.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus011Model {
extensions 15 to 115;

  optional ccsds_mal.protobuf.UINTEGER maxNoTc = 1;
  optional ccsds_mal.protobuf.UINTEGER scheduleStatus = 2;
  optional ccsds_mal.protobuf.UINTEGER apid = 3;
  optional ccsds_mal.protobuf.UINTEGER noFreeCommands = 4;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeNoFreeCommands = 5;
  optional ccsds_mal.protobuf.UINTEGER freeSpace = 6;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeFreeSpace = 7;
  optional ccsds_mal.protobuf.BOOLEAN spaceInNumberOfCommands = 8;
  optional ccsds_mal.protobuf.UINTEGER noSubSchedule = 9;
  optional pusGroundModel.protobuf.PusElement pusElement = 10;
  optional ccsds_mal.protobuf.TIME groundDate = 11;
  optional ccsds_mal.protobuf.UINTEGER status = 12;
  repeated pusGroundModel.protobuf.Pus011Apid pus011Apid = 13;
  optional ccsds_mal.protobuf.BOOLEAN useTimeShifts = 14;
}
